2004-12-09  Adam Heath  <doogie@brainfood.com>

	* kaffe/kaffevm/jit3/basecode.c, kaffe/kaffevm/jit3/basecode.h,
	  kaffe/kaffevm/jit3/icode.c:
	  Fix 'function returns an aggretate type' warning.

2004-12-09  Adam Heath  <doogie@brainfood.com>

	* tools/gjdoc/javalib/Makefile.am, tools/gjdoc/javalib/Makefile.in:
	  Fix broken invocation of rebuildLib, by exporting vars in the
	  Makefile.

2004-12-08  Adam Heath  <doogie@brainfood.com>

	* kaffe/xprof/debugFile.c: s/null/NULL/, I hand-applied a diff.

2004-12-08  Adam Heath  <doogie@brainfood.com>

	* kaffe/xprof/debugFile.c: When printing out the DIA_SourceFile
	  record, if addr is null, hard-code 0 as the value; otherwise,
	  fprintf prints '(nil)', and ld complains when linking.

2004-12-08  Adam Heath  <doogie@brainfood.com>

	* kaffe/kaffevm/systems/unix-pthreads/thread-impl.c:
	  Call unprotectThreadList *before* calling pthread_exit.  This
	  prevents deadlocks during shutdown(discovered while getting xprof
	  to work).

2004-12-08  Adam Heath  <doogie@brainfood.com>

	* kaffe/kaffe/main.c: Add call to enableXProfiling.

2004-12-08  Adam Heath  <doogie@brainfood.com>

	* libraries/javalib/Makefile.am,
	  libraries/javalib/Makefile.in,
	  libraries/javalib/rebuildLib.in:
 	  No longer sed the Makefile, looking for our vars.  Instead,
	  the makefile now exports what we need.  This allows
	  --with-jikes="jikes +Pno-shadow +Pno-switchcheck" to be used,
	  and the classes compiled accordingly.

2004-12-08  Adam Heath  <doogie@brainfood.com>

	* test/regression/SoTimeout.java: No longer use buffered
	  anything, nor any encoder/decoder stuff.  It's not specified
	  what should happen to buffered data when an IOException
	  occurs(InterruptedIOException included).

2004-12-08  Guilhem Lavaux  <guilhem@kaffe.org>

	* kaffe/kaffevm/object.c
	(newMultiArrayChecked): Fixed recursion.

	* test/regression/MultiArray.java: New test by Mark Wielaard <mark@klomp.org>

	* test/regression/Makefile.am: Added MultiArray.
